# fitness

./: Cargo.toml  Fitness.md  README.md  go.sh  interval.gnuplot  update.sh
samples/: simple.md
src/: main.rs
