[package]
name = "fitness"
version = "0.1.0"
edition = "2024"
description = "Track daily event"
license = "MIT"
author = "martinfrances107@hotmail.com"

[dependencies]

chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
date_time_parser = "0.2.0"
env_logger = "0.11.8"
log = "0.4.28"
