[package]
name = "fitness"
version = "0.1.0"
edition = "2024"
description = "Track daily event"
license = "MIT"
authors = ["Martin Frances <martinfrances107@hotmail.com>"]
repository = "https://github.com/martinfrances107/fitness.git"
readme = "README.md"
rust-version = "1.85"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
date_time_parser = "0.2.0"
env_logger = "0.11.8"
log = "0.4.28"
